--- a/AI_Project.ipynb
+++ b/AI_Project.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "kxldJwrSh0ih"
       },
@@ -25,13 +25,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "vuFH3SCrXJT8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7ab7d53e-c82a-4b5e-d2d1-37b45291b113"
+        "outputId": "f2beb531-cb3f-47f4-f815-064d4d8d448e"
       },
       "outputs": [
         {
@@ -81,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "Q3Xp3tznkHTP"
       },
@@ -97,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -132,13 +132,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8EP-T4QFihFF",
-        "outputId": "fecf9908-e868-47dd-9ec7-8688bf01ec1e"
+        "outputId": "d85617ae-0272-4f23-d1f2-c2cb10b76bb6"
       },
       "outputs": [
         {
@@ -179,29 +179,61 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9GO_IHQPTdhx",
-        "outputId": "bd93fcf7-aa9b-4bc3-a27d-4071ddbdc1e8"
+        "outputId": "608619f4-a9c1-4843-f4f8-c7a2f575ac8e"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "[[  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
-            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
-            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
-            " [  0   0   0   0   7  27  92 143 165 206 207 182 235  77   0   0]\n",
-            " [  0   0   0   0 110 253 253 253 230 250  82  51  31   0   0   0]\n",
-            " [  0   0   0   0  26 133 222 214   6  50  17   0   0   0   0   0]\n",
-            " [  0   0   0   0   0   2 123 206   1   0   0   0   0   0   0   0]\n",
-            " [  0   0   0   0   0   0   4 188 142  59   0   0   0   0   0   0]\n",
-            " [  0   0   0   0   0   0   0  32 190 242  84   4   0   0   0   0]\n",
-            " [  0   0   0   0   0   0   0   0   5 103 253  78   0   0   0   0]\n",
-            " [  0   0   0   0   0   0   0   0  68 172 253  86   0   0   0   0]\n",
-            " [  0   0   0   0   0   2  64 191 247 249 152  26   0   0   0   0]\n",
-            " [  0   0   0   4  76 147 250 239 165  44   0   0   0   0   0   0]\n",
-            " [  0   0  57 212 251 238 218  50   0   0   0   0   0   0   0   0]\n",
-            " [  0   0  15  32  30  17   4   0   0   0   0   0   0   0   0   0]\n",
-            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0]]\n"
+            "[[-1.         -1.         -1.         -1.         -1.         -1.\n",
+            "  -1.         -1.         -1.         -1.         -1.         -1.\n",
+            "  -1.         -1.         -1.         -1.        ]\n",
+            " [-1.         -1.         -1.         -1.         -1.         -1.\n",
+            "  -1.         -1.         -1.         -1.         -1.         -1.\n",
+            "  -1.         -1.         -1.         -1.        ]\n",
+            " [-1.         -1.         -1.         -1.         -1.         -1.\n",
+            "  -1.         -1.         -1.         -1.         -1.         -1.\n",
+            "  -1.         -1.         -1.         -1.        ]\n",
+            " [-1.         -1.         -1.         -1.         -0.94485295 -0.7879902\n",
+            "  -0.28186268  0.12401959  0.29313725  0.61446077  0.6204657   0.42512256\n",
+            "   0.84105396 -0.39865196 -1.         -1.        ]\n",
+            " [-1.         -1.         -1.         -1.         -0.13774511  0.9843137\n",
+            "   0.9843137   0.9843137   0.80490196  0.9632353  -0.35870096 -0.5980392\n",
+            "  -0.7567402  -1.         -1.         -1.        ]\n",
+            " [-1.         -1.         -1.         -1.         -0.7941177   0.04068631\n",
+            "   0.7432597   0.67855394 -0.95281863 -0.60968137 -0.86789215 -1.\n",
+            "  -1.         -1.         -1.         -1.        ]\n",
+            " [-1.         -1.         -1.         -1.         -1.         -0.98786765\n",
+            "  -0.03308819  0.6142157  -0.9914216  -1.         -1.         -1.\n",
+            "  -1.         -1.         -1.         -1.        ]\n",
+            " [-1.         -1.         -1.         -1.         -1.         -1.\n",
+            "  -0.9716912   0.47732845  0.1121324  -0.53615195 -0.99938726 -1.\n",
+            "  -1.         -1.         -1.         -1.        ]\n",
+            " [-1.         -1.         -1.         -1.         -1.         -1.\n",
+            "  -1.         -0.7518382   0.4882353   0.9022059  -0.3408088  -0.97022057\n",
+            "  -1.         -1.         -1.         -1.        ]\n",
+            " [-1.         -1.         -1.         -1.         -1.         -1.\n",
+            "  -1.         -1.         -0.95882356 -0.19485292  0.9829657  -0.38799018\n",
+            "  -1.         -1.         -1.         -1.        ]\n",
+            " [-1.         -1.         -1.         -1.         -1.         -1.\n",
+            "  -1.         -1.         -0.46813723  0.34644613  0.98382354 -0.32794118\n",
+            "  -1.         -1.         -1.         -1.        ]\n",
+            " [-1.         -1.         -1.         -1.         -1.         -0.9852941\n",
+            "  -0.49632353  0.49644607  0.9401961   0.952451    0.19411764 -0.7992647\n",
+            "  -1.         -1.         -1.         -1.        ]\n",
+            " [-1.         -1.         -1.         -0.9669118  -0.4018382   0.15772061\n",
+            "   0.95980394  0.8776961   0.29607844 -0.65134805 -0.9987745  -1.\n",
+            "  -1.         -1.         -1.         -1.        ]\n",
+            " [-1.         -1.         -0.55306375  0.6600491   0.9692402   0.8682598\n",
+            "   0.71213233 -0.6105392  -1.         -1.         -1.         -1.\n",
+            "  -1.         -1.         -1.         -1.        ]\n",
+            " [-1.         -1.         -0.8833333  -0.75196075 -0.7670343  -0.86801475\n",
+            "  -0.970098   -1.         -1.         -1.         -1.         -1.\n",
+            "  -1.         -1.         -1.         -1.        ]\n",
+            " [-1.         -1.         -1.         -1.         -1.         -1.\n",
+            "  -1.         -1.         -1.         -1.         -1.         -1.\n",
+            "  -1.         -1.         -1.         -1.        ]]\n"
           ]
         }
       ],
@@ -214,14 +246,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "4P24Lhzxhb2S",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "4ec1d646-61a4-4923-c963-fdf148b4d027"
+        "outputId": "cedbb3b5-9cd0-404c-8b62-1fa9fb55e13b"
       },
       "outputs": [
         {
@@ -293,13 +325,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "bU4y09R2nY22",
-        "outputId": "ddb87fd0-84b5-4901-eb2a-06d71cafd7cc"
+        "outputId": "a18775df-4645-42a5-eac5-2733fea4d5ad"
       },
       "outputs": [
         {
@@ -322,13 +354,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Bm4UDmwFzJrp",
-        "outputId": "3b272543-7fd2-4872-b5c3-e2e7c8e1694e"
+        "outputId": "53489c00-d7fa-4b60-da76-ccd666862808"
       },
       "outputs": [
         {
@@ -605,11 +637,10 @@
       },
       "outputs": [],
       "source": [
-        "import numpy as np\n",
-        "import tensorflow as tf\n",
-        "# from tensorflow.keras.datasets import mnist\n",
+        "\n",
         "from sklearn.cluster import KMeans\n",
         "from sklearn.metrics import accuracy_score\n",
+        "\n",
         "\n",
         "# Load the MNIST dataset\n",
         "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
@@ -656,112 +687,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Flxc7a12VbuB",
-        "outputId": "9f361f25-e15c-4798-ce89-6261c36a3104"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Accuracy: 96.94%\n",
-            "Number of 0s in test data: 980\n",
-            "Number of 3s in test data: 1010\n",
-            "Number of 8s in test data: 974\n",
-            "Confusion Matrix:\n",
-            "[[ 974    1    1    0    0    1    2    1    0    0]\n",
-            " [   0 1133    2    0    0    0    0    0    0    0]\n",
-            " [  11    8  988    2    1    0    2   16    4    0]\n",
-            " [   0    3    2  976    1   12    1    7    4    4]\n",
-            " [   1    8    0    0  945    0    5    1    1   21]\n",
-            " [   5    0    0    8    2  866    4    1    2    4]\n",
-            " [   6    3    0    0    3    2  944    0    0    0]\n",
-            " [   0   25    3    0    1    0    0  989    0   10]\n",
-            " [   6    4    6   11    7   12    1    6  916    5]\n",
-            " [   5    6    3    6    8    4    1   11    2  963]]\n"
-          ]
-        }
-      ],
-      "source": [
-        "#KNN  confusion matrix\n",
-        "import numpy as np\n",
-        "import tensorflow as tf\n",
-        "from sklearn.metrics import accuracy_score, confusion_matrix\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "\n",
-        "\n",
-        "# Filter the data and labels to focus on digits 0, 3, 8\n",
-        "selected_digits = [0,1,2,3,4,5,6,7,8,9]\n",
-        "selected_indices_train = np.isin(y_train, selected_digits)\n",
-        "X_train_selected = X_train_flat[selected_indices_train]\n",
-        "y_train_selected = y_train[selected_indices_train]\n",
-        "\n",
-        "selected_indices_test = np.isin(y_test, selected_digits)\n",
-        "X_test_selected = X_test_flat[selected_indices_test]\n",
-        "y_test_selected = y_test[selected_indices_test]\n",
-        "\n",
-        "\n",
-        "def knn_predict(x_test, x_train, y_train, k=3):\n",
-        "    predictions = []\n",
-        "\n",
-        "    for test_point in x_test:\n",
-        "        distances = np.sqrt(np.sum((x_train - test_point)**2, axis=1))   # (x_train - test_point) element-wise substraction b-n each vector in x_train and the vector test_point?\n",
-        "        k_nearest_indices = np.argsort(distances)[:k]\n",
-        "        k_nearest_labels = y_train[k_nearest_indices]\n",
-        "        predicted_label = np.argmax(np.bincount(k_nearest_labels))\n",
-        "        predictions.append(predicted_label)\n",
-        "\n",
-        "    return np.array(predictions)\n",
-        "\n",
-        "\n",
-        "# Make predictions using certain number of neighbors\n",
-        "k = 7\n",
-        "predictions = knn_predict(X_test_selected, X_train_selected, y_train_selected, k)\n",
-        "\n",
-        "# Calculate accuracy in percentage\n",
-        "accuracy = accuracy_score(y_test_selected, predictions) * 100\n",
-        "print(f\"Accuracy: {accuracy:.2f}%\")\n",
-        "\n",
-        "# Count the occurrences of 0, 3, and 8 in y_test_selected\n",
-        "count_zeros = np.count_nonzero(y_test_selected == 0)\n",
-        "count_threes = np.count_nonzero(y_test_selected == 3)\n",
-        "count_eights = np.count_nonzero(y_test_selected == 8)\n",
-        "\n",
-        "print(f\"Number of 0s in test data: {count_zeros}\")\n",
-        "print(f\"Number of 3s in test data: {count_threes}\")\n",
-        "print(f\"Number of 8s in test data: {count_eights}\")\n",
-        "\n",
-        "# Create and print confusion matrix\n",
-        "conf_matrix = confusion_matrix(y_test_selected, predictions, labels=selected_digits)\n",
-        "print(\"Confusion Matrix:\")\n",
-        "print(conf_matrix)\n",
-        "# confusion_matrix returns: ndarray of shape (n_classes, n_classes)\n",
-        "#     Confusion matrix whose i-th row and j-th\n",
-        "# column entry indicates the number of\n",
-        "# samples with true label being i-th class\n",
-        "# and predicted label being j-th class.\n",
-        "\n",
-        "\n",
-        "# e.g. when classes are 0, 3, 8\n",
-        "# [[976 2  2]  -> 976, correctly predicted 0-s; 2, 0-s predicted as 3-s; 2,0-s predicted as 8-s\n",
-        "#  [0 1004  6]  -> 0, 3-s predicted as 0-s; 1004, 3-s correctly predicted; 6, 3-s predicted as 8-s\n",
-        "#  [6 14 954]]  -> 6, 0-s predicted as 8-s; 14,3-s predicted as 8; 954, 8-s correctly predicted\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 15,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 581
-        },
-        "outputId": "b7e1c20e-e54f-4edd-89d7-3195ff4e404e",
+        "outputId": "0cc84b33-6698-4161-e853-444991dc72d3",
         "id": "MchSgepcAtta"
       },
       "outputs": [
@@ -769,7 +700,21 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy: 96.94%\n"
+            "Accuracy: 96.94%\n",
+            "\n",
+            "F1 Scores for Each Class:\n",
+            "F1 Score for digit 0: 0.9799\n",
+            "F1 Score for digit 1: 0.9742\n",
+            "F1 Score for digit 2: 0.9701\n",
+            "F1 Score for digit 3: 0.9697\n",
+            "F1 Score for digit 4: 0.9692\n",
+            "F1 Score for digit 5: 0.9681\n",
+            "F1 Score for digit 6: 0.9844\n",
+            "F1 Score for digit 7: 0.9602\n",
+            "F1 Score for digit 8: 0.9627\n",
+            "F1 Score for digit 9: 0.9554\n",
+            "\n",
+            "Average F1 Score: 0.9694\n"
           ]
         },
         {
@@ -784,9 +729,9 @@
         }
       ],
       "source": [
-        "#KNN  confusion matrix\n",
+        "#KNN  Confusion Matrix\n",
         "import seaborn as sns\n",
-        "from sklearn.metrics import accuracy_score, confusion_matrix\n",
+        "from sklearn.metrics import accuracy_score,f1_score, confusion_matrix\n",
         "\n",
         "selected_digits = [0,1,2,3,4,5,6,7,8,9]\n",
         "selected_indices_train = np.isin(y_train, selected_digits)\n",
@@ -818,6 +763,18 @@
         "# Calculate accuracy in percentage\n",
         "accuracy = accuracy_score(y_test_selected, predictions) * 100\n",
         "print(f\"Accuracy: {accuracy:.2f}%\")\n",
+        "\n",
+        "\n",
+        "# Calculate F1 score for each class and average\n",
+        "f1_scores = f1_score(y_test_selected, predictions, labels=selected_digits, average=None)\n",
+        "average_f1 = np.mean(f1_scores)\n",
+        "\n",
+        "print(\"\\nF1 Scores for Each Class:\")\n",
+        "for digit, f1 in zip(selected_digits, f1_scores):\n",
+        "    print(f\"F1 Score for digit {digit}: {f1:.4f}\")\n",
+        "\n",
+        "print(f\"\\nAverage F1 Score: {average_f1:.4f}\")\n",
+        "\n",
         "\n",
         "# Create and print confusion matrix\n",
         "conf_matrix = confusion_matrix(y_test_selected, predictions, labels=selected_digits)\n",
@@ -847,7 +804,7 @@
         "        num_samples, num_features = X.shape\n",
         "        unique_classes = np.unique(y)\n",
         "\n",
-        "        # Calculate class probabilities\n",
+        "        # Calculate class probabilities for dataset's class distribution.\n",
         "        for cls in unique_classes:\n",
         "            class_samples = X[y == cls]\n",
         "            self.class_probabilities[cls] = len(class_samples) / num_samples\n",
@@ -896,9 +853,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "li1g9rSn1Hy0",
-        "outputId": "4932c57f-6ac9-48e9-b862-a9ec4f6ab1c0"
+        "outputId": "74f5a019-ab19-4844-8c84-37b4a276e989"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
