--- a/AI_Project.ipynb
+++ b/AI_Project.ipynb
@@ -1,16 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/NaomyChemungor/AI_Autumn2023/blob/main/AI_Project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -1108,26 +1098,11 @@
           "metadata": {}
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# k-NN precision, recall, and F1-score for each class\n",
-        "class_report = classification_report(y_test_selected, predictions, labels=selected_digits)\n",
-        "print(\"Classification Report:\")\n",
-        "print(class_report)"
-      ],
-      "metadata": {
-        "id": "Bsd4rlIj7h0M"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
