--- a/AI_Project.ipynb
+++ b/AI_Project.ipynb
@@ -87,7 +87,7 @@
       },
       "outputs": [],
       "source": [
-        "# Normalize the pixel values to the range -1 to 1(Feature Scaling)\n",
+        "# Normalize the pixel values to the range -1 to 1,no single feature dominates the others due to having a larger scale\n",
         "X_train = (X_train.astype(np.float32) / 127.5) - 1.0\n",
         "X_test = (X_test.astype(np.float32) / 127.5) - 1.0"
       ]
@@ -205,7 +205,7 @@
         }
       ],
       "source": [
-        "# Flatten the original images to 1D\n",
+        "# Flatten the original images to 1D,   matrix multiplications,\n",
         "X_train_flat = X_train.reshape(X_train.shape[0], -1)\n",
         "X_test_flat = X_test.reshape(X_test.shape[0], -1)\n",
         "print(X_train_flat.shape)\n",
@@ -225,8 +225,9 @@
     {
       "cell_type": "code",
       "source": [
+        "#Perform digit selection for a classification task\n",
         "\n",
-        "# Define selected digits for classification\n",
+        "#Define selected digits for classification\n",
         "selected_digits = [0,1,2,3,4,5,6,7,8,9]\n",
         "\n",
         "# Filter training data for the selected digits\n",
@@ -247,17 +248,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
-        "id": "MchSgepcAtta"
+        "id": "MchSgepcAtta",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4286fabd-92c8-4192-c7cf-8b6773df7bbc"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy: 96.94%\n"
+          ]
+        }
+      ],
       "source": [
-        "# setting the hyperparameters\n",
-        "k=7\n",
         "\n",
+        "from sklearn.metrics import accuracy_score\n",
         "# Function to predict using k-nearest neighbors algorithm\n",
-        "def knn_predict(x_test, x_train, y_train, k):\n",
+        "\n",
+        "\n",
+        "def knn_predict(x_test, x_train, y_train, k): # set the parameters\n",
         "    predictions = []\n",
         "\n",
         "    for test_point in x_test:\n",
@@ -273,6 +287,9 @@
         "        predictions.append(predicted_label)\n",
         "\n",
         "    return np.array(predictions)\n",
+        "\n",
+        "# setting the hyperparameters\n",
+        "k=7\n",
         "\n",
         "# Make predictions using certain number of neighbors\n",
         "predictions = knn_predict(X_test_selected, X_train_selected, y_train_selected, k)\n",
@@ -297,9 +314,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tV3Tcvgu51-U",
-        "outputId": "8fd77cd7-b296-410c-906d-41765099d35e"
+        "outputId": "88f4eed5-1e70-4645-9769-21bebe5e3723"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -393,10 +410,12 @@
         "        num_samples, num_features = X.shape\n",
         "        unique_classes = np.unique(y)\n",
         "\n",
+        "\n",
         "        # Calculate class probabilities for dataset's class distribution.\n",
         "        for cls in unique_classes:\n",
         "            class_samples = X[y == cls]\n",
         "            self.class_probabilities[cls] = len(class_samples) / num_samples\n",
+        "\n",
         "\n",
         "            # Calculate feature probabilities for each class\n",
         "            for feature_index in range(num_features):\n",
@@ -412,7 +431,8 @@
         "                   #Apply Laplace smoothing by adding 1 to the count and normalize by total count of pixels in the class and unique values\n",
         "                    self.feature_probabilities[cls][(feature_index, value)] += (count + 1) / (len(class_samples) + len(unique_values)) #Number of unique pixel values for the current feature within the class.\n",
         "\n",
-        "# Function to predict classes for test data\n",
+        "\n",
+        "  #Function to predict classes for test data\n",
         "    def predict(self, X):\n",
         "        predictions = []\n",
         "        for sample in X:\n",
